		of the build system bootstrap and is included in the source
		tarball, ABI version is set to be compatible with the 1.2
		series, all Autotools installed files are copied rather than
		symlinked and put in the build-aux directory, building
		rigmem and rigmatrix are now user selectable at configure
		run time, building static libraries are disabled by default.

Version 1.2.15.3
	2012-11-01
	* Fix configure.ac so that rigctld/rotcld work on Win32 platform
	* Add NSIS script to build executable installer on Win32 platform
	* Remove unsupported commands on IC-756 (non-Pro model) from AK6I
	* Fix set_split in netrigctl.c to properly accept the split
		value.  TNX, N2ADR.
	* IC-R8500: Add RIG_LEVEL_AF to has_set_level.  TNX John, EI7IG
	* ADAT updates from Frank, DG1SBG, needed for stable operation.

Version 1.2.15.2
	2012-08-05
	* Read eeprom value for digital mode from FT-857
	* Clean up TS-950 series commands and read mode using IF command
	* Fix GS-232A/B rotor command terminations
	* Fix warnings and other issues found by mingw-w64
	* Allow seamless access to ports higher than COM9 on Windows
	* Fix ineffective packed attribute on WinRadio
	* Correct low signal strength S-meter error on AR7030+
	* Updates to HiQSDR by Jim, N2ADR

Version 1.2.15.1
	2012-03-11
	* HD-1780 rotor endpoint limit fix
	* Quell adat compile warnings
	* Sort rig/rot list output from rig/rotctl (-l) by model #
	* TenTec Jupiter (TT538) fixes
	* Include various backend notes files
	* Document sorted -l output for <rig|rot>ctl[d]
	* Updates README.betatester and README.developer

Version 1.2.15
	2012-02-02
	* New models: TT-599 Eagle, IC-RX7, IC-1275, HiQSDR, ADAT ADT-200A,
		DttSP UDP, TM-D710
	* New rotator backends: Celestron (telescope mount)
	* Fixes and features: K3, various other rigs
	* Update LGPL/GPL header boilerplate
	* Quell various compiler errors
	* Add CM108 PTT capability

Version 1.2.14
	2011-08-01
	* New models: SigFox Transfox, TH-D72A, IC-7410, IC-9100, IC-R9500, KX3,