@@ -254,9 +254,9 @@ are:
   --without-cxx-binding   do not build C++ binding and demo [default=yes]
   --with-perl-binding     build perl binding and demo [default=no]
   --with-perl-inc         directory containing perl includes
+  --with-python-binding   build python binding and demo [default=no]
   --with-tcl-binding      build Tcl binding and demo [default=no]
   --with-tcl=PATH         directory containing tcl configuration (tclConfig.sh)
-  --with-python-binding   build python binding and demo [default=no]
 
     Optional features that may require specialized hardware are:
 
@@ -278,3 +278,19 @@ has no effect on rigctld/rotctld).  You may get a make error (which means it
 will quit before compilation is complete) if the
 --with-[perl|python|tcl]-binding option(s) are given and the Swig package is
 not installed.
+
+    Perl and Python bindings should be installed into a 'configure' runtime
+discovered location under the default prefix.
+
+    The TCL binding will be installed into $(libdir)/tcl/Hamlib (default).  If a
+non-default --prefix is passed to 'configure', the 'lappend' line in tcltest.tcl
+script will need to be modified accordingly so the script can load the Hamlib
+package.  As TCL doesn't seem to have a "standard" location for additional
+packages and since there seemed to be no common location among distributions,
+this path was chosen abitrarily.  Any patches to improve installation path
+discovery of local packages are welcome.
+
+    When running 'make uninstall' the installed files for the Python and TCL
+modules are removed.  The Perl files will remain due to a design decision
+of the Perl MakeMaker module.  Installed Perl binding files will need to be
+removed manually.
